--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "webpack": "4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0"
   }
 }
