--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1"
   }
 }
